[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Steve Muecklisch <steve.muecklisch@gmail.com>"]
edition = "2021"
rust-version = "1.71"

[dependencies]
clap = { version = "~4.4", features = ["derive", "env"] }
lazy_static = "1.4"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
