[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Steve Muecklisch <steve.muecklisch@gmail.com>"]
edition = "2021"
rust-version = "1.82"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
lazy_static = "1.5"
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }

[profile.release]
opt-level = 3
